samples/_failures_safe/1761154586_63fafa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e14839c.c: In function ‘main’:
./samples/SAFE/__tmp_1e14839c.c:140:5: error: expected expression at end of input
  140 |     if (!read_matrix_from_input(&
      |     ^~
./samples/SAFE/__tmp_1e14839c.c:140:5: error: expected declaration or statement at end of input
